; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-debugchannel.c_lrelease.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-debugchannel.c_lrelease.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.channel_box = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lrelease to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lrelease(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.channel_box*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.channel_box* @lua_touserdata(i32* %4, i32 1)
  store %struct.channel_box* %5, %struct.channel_box** %3, align 8
  %6 = load %struct.channel_box*, %struct.channel_box** %3, align 8
  %7 = icmp ne %struct.channel_box* %6, null
  br i1 %7, label %8, label %18

8:                                                ; preds = %1
  %9 = load %struct.channel_box*, %struct.channel_box** %3, align 8
  %10 = getelementptr inbounds %struct.channel_box, %struct.channel_box* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = call i32* @channel_release(i32* %11)
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %8
  %15 = load %struct.channel_box*, %struct.channel_box** %3, align 8
  %16 = getelementptr inbounds %struct.channel_box, %struct.channel_box* %15, i32 0, i32 0
  store i32* null, i32** %16, align 8
  br label %17

17:                                               ; preds = %14, %8
  br label %18

18:                                               ; preds = %17, %1
  ret i32 0
}

declare dso_local %struct.channel_box* @lua_touserdata(i32*, i32) #1

declare dso_local i32* @channel_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
